--- a/contato.html
+++ b/contato.html
@@ -227,7 +227,7 @@
     <script src="js/global.js"></script>
 
     <!-- CONTACT -->
-    <script src="js/contact.form.js"></script>
+    <script src="contact.form.js"></script>
 
 </body>
 </html>
