--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     <script src="js/global.js"></script>
 
     <!-- CONTACT -->
-    <script src="js/contact.form.js"></script>
+    <script src="contact.form.js"></script>
 
 </body>
 </html>
