atualização php mail

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                         <p>Região metropolitana: <a style="color: #fff;" href="https://www.google.ca/maps/place/Rio+de+Janeiro,+RJ,+Brasil/@-22.913885,-43.7261811,10z/data=!3m1!4b1!4m5!3m4!1s0x9bde559108a05b:0x50dc426c672fd24e!8m2!3d-22.9068467!4d-43.1728965" target="_blank"><b>Rio de Janeiro, RJ</b></a></p>
                                     </div>
                                 </div>
-                                <form class="contact-form" method="post" action="send_mail.php">
+                                <form class="contact-form">
                                     <div class="input-wrapper light col-xs-b30">
                                         <input name="name" class="input" type="text" />
                                         <label>Nome</label>
