index.html links -> full https url

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             
                                 <nav class="text-center single-column clearfix">
                                     <ul>
-                                        <li class="active"><a href="index.html">Home</a></li>
+                                        <li class="active"><a href="https://www.studioomg.com.br">Home</a></li>
                                         <li><a href="quem-somos.html">Quem somos</a></li>
                                         <li><a href="servicos.html">Serviços</a></li>
                                         <li><a href="portfolio.html">Portfolio</a></li>
@@ -171,7 +171,7 @@
                         </div>
                     </div>
                     <div class="col-xs-6 col-xs-text-left col-sm-text-center col-sm-4">
-                        <a class="logo" href="index.html"><img src="img/brand/LOGO_STOMG.png" alt="" /></a>  
+                        <a class="logo" href="https://www.studioomg.com.br"><img src="img/brand/LOGO_STOMG.png" alt="" /></a>  
                     </div>
                     <div class="col-xs-6 col-sm-4 text-right">
                         <div class="hamburger-icon open-overlay" data-rel="1">
