--- a/case-dermabox.html
+++ b/case-dermabox.html
@@ -52,7 +52,7 @@
                             
                                 <nav class="text-center single-column clearfix">
                                     <ul>
-                                        <li class="active"><a href="index.html">Home</a></li>
+                                        <li class="active"><a href="https://www.studioomg.com.br">Home</a></li>
                                         <li><a href="quem-somos.html">Quem somos</a></li>
                                         <li><a href="servicos.html">Serviços</a></li>
                                         <li><a href="portfolio.html">Portfolio</a></li>
@@ -75,7 +75,7 @@
             <div class="wide-container-fluid">
                 <div class="row">
                     <div class="col-xs-6 col-sm-12 col-xs-text-left col-sm-text-center">
-                        <a class="logo" href="index.html"><img src="img/brand/LOGO_STOMG.png" alt="" /></a>
+                        <a class="logo" href="https://www.studioomg.com.br"><img src="img/brand/LOGO_STOMG.png" alt="" /></a>
                     </div>
                     <div class="col-xs-6 text-right visible-xs">
                         <div class="hamburger-icon open-overlay" data-rel="1">
