--- a/contato.html
+++ b/contato.html
@@ -71,7 +71,7 @@
             <div class="wide-container-fluid">
                 <div class="row">
                     <div class="col-xs-6 col-sm-12 col-xs-text-left col-sm-text-center">
-                        <a class="logo" href="index.html"><img src="img/brand/LOGO_STOMG.png" alt="" /></a>
+                        <a class="logo" href="https://www.studioomg.com.br"><img src="img/brand/LOGO_STOMG.png" alt="" /></a>
                     </div>
                     <div class="col-xs-6 text-right visible-xs">
                         <div class="hamburger-icon open-overlay" data-rel="1">
