hide video on xs devices

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     </nav>
                     
                     <div class="full-size-banner-entry full-size valign-middle" style="background-image: url('img/home-banner.jpg');">
-                        <div class="full-size video-wrapper shadow">
+                        <div class="full-size video-wrapper shadow hidden-xs">
                             <video loop autoplay muted>
                                 <source src="video/site-home-video.mp4" type="video/mp4" />
                             </video>
