--- a/index.html
+++ b/index.html
@@ -294,7 +294,15 @@
     <script src="js/global.js"></script>
     <script src="js/is_mobile.js"></script>
     
-    
+    <script>
+        videoLoad = function() {
+            if window.mobilecheck = true {
+                console.log('1');
+            }else{
+                console.log('2');
+            }
+        }
+    </script>
 
     <!-- CONTACT -->
     <script src="contact.form.js"></script>
