--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
     
     <script>
         videoLoad = function() {
-            if window.mobilecheck = true {
+            if window.mobilecheck(true) {
                 console.log('1');
             }else{
                 console.log('2');
