--- a/index.html
+++ b/index.html
@@ -299,10 +299,10 @@
             
             if (window.mobilecheck(true)) {
               console.log('1');
-              document.getElementById("home-video").Element.setAttribute('preload', 'none');
+              document.getElementById("home-video").setAttribute('preload', 'none');
             } else {
               console.log('2');
-              document.getElementById("home-video").Element.setAttribute('preload', 'auto');
+              document.getElementById("home-video").setAttribute('preload', 'auto');
             };
        
     </script>
