Async js update

--- a/portfolio.html
+++ b/portfolio.html
@@ -291,12 +291,12 @@
         </footer>
     </div>
 
-    <script src="js/jquery-2.1.4.min.js"></script>
-    <script src="js/swiper.jquery.min.js"></script>
-    <script src="js/jquery.mousewheel.min.js"></script>
-    <script src="js/global.js"></script>
+    <script src="js/jquery-2.1.4.min.js"async></script>
+    <script src="js/swiper.jquery.min.js"async></script>
+    <script src="js/jquery.mousewheel.min.js"async></script>
+    <script src="js/global.js"async></script>
 
-    <script src="js/isotope.pkgd.min.js"></script>
+    <script src="js/isotope.pkgd.min.js"async></script>
     <script>
         $(function(){
             $(window).load(function(){
@@ -321,7 +321,7 @@
         });
     </script>
 
-    <script src="js/parallax.jquery.js"></script>
+    <script src="js/parallax.jquery.js"async></script>
     <script>
         $(function(){
             $('.poster-3d').parallax({
@@ -331,7 +331,7 @@
         });
     </script>
 
-    <script src="js/simple-lightbox.min.js"></script>
+    <script src="js/simple-lightbox.min.js"async></script>
     <script>
         $(function(){
             var lightbox = $('.lightbox').simpleLightbox({
