--- a/case-shopping-grande-rio.html
+++ b/case-shopping-grande-rio.html
@@ -288,10 +288,10 @@
         
     </div>
 
-    <script src="js/jquery-2.1.4.min.js"async></script>
-    <script src="js/swiper.jquery.min.js"async></script>
-    <script src="js/jquery.mousewheel.min.js"async></script>
-    <script src="js/global.js"async></script>
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/swiper.jquery.min.js"></script>
+    <script src="js/jquery.mousewheel.min.js"></script>
+    <script src="js/global.js"></script>
 
 </body>
 </html>
