--- a/quem-somos.html
+++ b/quem-somos.html
@@ -351,11 +351,11 @@
             </div>
         </footer>
 
-    <script src="js/jquery-2.1.4.min.js"async></script>
-    <script src="js/swiper.jquery.min.js"async></script>
-    <script src="js/jquery.mousewheel.min.js"async></script>
-    <script src="js/global.js"async></script>
-    <script src="js/smoothscroll.js"async></script>
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/swiper.jquery.min.js"></script>
+    <script src="js/jquery.mousewheel.min.js"></script>
+    <script src="js/global.js"></script>
+    <script src="js/smoothscroll.js"></script>
 
 </body>
 </html>
